--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+
+/* diffult */
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
@@ -101,3 +103,4 @@ button:focus-visible {
   }
   
 }
+
