--- a/style.css
+++ b/style.css
@@ -26,13 +26,39 @@ a:hover {
   color: #535bf2;
 }
 
-body {
+#main {
   margin: 0;
   display: flex;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
 }
+
+/* create a stiking to the top for the header tag */
+/* header nav {
+  background-color: #333;
+  color: #fff;
+  padding: 1em;
+  display: flex;
+  justify-content: space-between;
+}
+header nav ul {
+  list-style: none;
+  display: flex;
+  margin: 0;
+  padding: 0;
+}
+header nav ul li {
+  margin-right: 1em;
+}
+header nav ul li a {
+  color: #fff;
+  text-decoration: none;
+} */
+
+
+
+
 
 .dark{
   color: rgba(179, 179, 179, 0.87);
